--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "passport_demo",
+    "password": "Onyx2013!",
+    "database": "passport_demo", 
+    "database2": "nextdoorNeighbor",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
