--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
     "username": "root",
-    "password": "Grishinka7",
-    "database": "nextdoorneighbor", 
+    "password": null,
+    "database": "nextdoorNeighbor",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   }
 }
