--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": null,
     "database": "nextdoorNeighbor",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
