--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Grishinka7",
+    "password": "Hermkicker91",
     "database": "nextdoorneighbor",
     "host": "127.0.0.1",
     "dialect": "mysql"
@@ -20,6 +20,7 @@
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "operatorsAliases": false,
+    "use_env_variable": "JAWSDB_URL"
   }
 }
