--- a/package.json
+++ b/package.json
@@ -19,25 +19,18 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
-    "mssql": "^6.1.0",
-    "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.8.6",
-    "sql": "^0.78.0"
+    "sequelize": "^5.8.6"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.19.1"
+    "eslint-plugin-prettier": "^2.6.2"
   },
   "engines": {
-    "node": "^0.8.14"
+    "node": "v10.16.1"
   }
 }
